# scut-instrument-booking

./: .env.dev  .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml
stevbot/plugins/sem_booklist/: __init__.py  eid_dict.py  utils.py
